# grodi_atm

./: .dockerignore  .gitignore  compose.simulation.yaml
docker/: Dockerfile.simulation  ros_entrypoint_sim.sh
docs/: docker_simulation.md  guia_software_atomizador.tex
install/: local_setup.sh  setup.sh
install/atm_bringup/share/atm_bringup/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/atm_bringup/share/atm_bringup/config/: system_params.yaml
install/atm_bringup/share/atm_bringup/launch/: system.launch.py
install/atm_bringup/share/atm_bringup/scripts/: atm_master_sentinel.py  atm_slave_sentinel.py
install/atm_bringup/share/atm_bringup/systemd/: atm-master-sentinel.service  atm-slave-sentinel.service
install/atm_interfaces/share/atm_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.sh  package.xml  package.zsh
install/atm_interfaces/share/atm_interfaces/action/: ExecuteMission.action  ExecuteMission.idl  ExecuteMission.json  NavigateToStop.action  NavigateToStop.idl  ReturnToBase.idl  (+9 more)
install/atm_link/lib/atm_link/: master_lora_bridge_node  slave_lora_bridge_node
install/atm_link/share/atm_link/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/atm_logging/share/atm_logging/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/atm_master/lib/atm_master/: admission_reel_controller_node  master_health_publisher_node  master_watchdog_node  mission_event_logger_node  mission_manager_node  pump_controller_node  server_mission_loader_node
install/atm_master/share/atm_master/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/atm_simulation/lib/atm_simulation/: atomizer_demo_sequence_node  atomizer_operator_console_node  gazebo_atomizer_controller_node
install/atm_simulation/share/atm_simulation/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/atm_slave/lib/atm_slave/: navigation_executor_node  slave_health_publisher_node  slave_state_manager_node  spray_controller_node  vertical_atomizer_controller_node
install/atm_slave/share/atm_slave/: package.bash  package.dsv  package.sh  package.xml  package.zsh
log/: latest_build
src/atm_bringup/: setup.cfg  setup.py
src/atm_bringup/launch/: system.launch.py
src/atm_interfaces/: CMakeLists.txt  package.xml
src/atm_interfaces/action/: ExecuteMission.action  NavigateToStop.action  ReturnToBase.action  RunPurge.action  SprayAtStop.action
src/atm_interfaces/msg/: FaultReport.msg  LineTarget.msg  SlaveStatus.msg  SprayReport.msg  StopDetection.msg
src/atm_interfaces/srv/: SetAdmissionReelMode.srv  SetZoneSelection.srv
src/atm_link/: setup.cfg  setup.py
src/atm_link/atm_link/: framing.py  master_lora_bridge_node.py  protocol.py  slave_lora_bridge_node.py  transport_jsonl.py  transport_lora_uart.py
src/atm_link/config/: link_params.yaml
src/atm_link/launch/: link.launch.py
src/atm_logging/: package.xml  setup.cfg  setup.py
src/atm_logging/atm_logging/: link_diagnostics_logger_node.py  mission_summary_logger_node.py  paths.py  schema.py  structured_event_logger_node.py  writers.py
src/atm_logging/launch/: logging.launch.py
src/atm_master/: package.xml  setup.cfg  setup.py
src/atm_master/atm_master/: admission_reel_controller_node.py  common.py  delta_elw.py  delta_vfd_modbus.py  ground_reel_motor_node.py  hose_guide_controller_node.py  master_health_publisher_node.py  master_watchdog_node.py  mission_event_logger_node.py  mission_manager_node.py  server_mission_loader_node.py
src/atm_master/atm_master/legacy/: __init__.py  admission_reel_controller_node.py  mission_event_logger_node.py
src/atm_master/config/: master_params.yaml
src/atm_master/launch/: master.launch.py
src/atm_simulation/: package.xml  setup.cfg  setup.py
src/atm_simulation/atm_simulation/: atomizer_demo_sequence_node.py  atomizer_operator_console_node.py  gazebo_atomizer_controller_node.py  real_stack_operator_console_node.py  real_stack_visualizer_node.py  sim_command_cli.py
src/atm_simulation/config/: simulation_params.yaml
src/atm_simulation/launch/: atomizer_demo.launch.py  atomizer_interactive.launch.py  atomizer_real_stack.launch.py
src/atm_simulation/worlds/: atomizer_greenhouse.sdf
src/atm_slave/: setup.cfg  setup.py
src/atm_slave/atm_slave/: navigation_executor_node.py  rail_motion_controller_node.py  slave_health_publisher_node.py  slave_state_manager_node.py  vertical_atomizer_controller_node.py  vertical_reel_controller_node.py
src/atm_slave/atm_slave/hardware/: __init__.py  moving_vega11.py  vegaio.py
src/atm_slave/atm_slave/legacy/: navigation_executor_node.py  vertical_atomizer_controller_node.py
src/atm_slave/config/: slave_params.yaml
src/atm_slave/launch/: slave.launch.py
(+373 files in other folders)
