<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atm_master</name>
  <version>0.0.0</version>
  <description>Nodos ROS 2 de la maestra: misión, bomba, carrete de admisión, watchdog y logging.</description>
  <maintainer email="gonzalo@todo.todo">gonzalo</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_srvs</depend>
  <depend>atm_interfaces</depend>
  <depend>atm_link</depend>
  <depend>atm_logging</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>python3-pymodbus</exec_depend>
  <exec_depend>python3-serial</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
